force-app/main/default/objects/Duplicate_Rules_Criteria__mdt/Duplicate_Rules_Criteria__mdt.object-meta.xml
<CustomObject>
    <description>To define duplicate matching criteria</description>
    <label>Duplicate Rules Criteria</label>
    <pluralLabel>Duplicate Rules Criteria</pluralLabel>
</CustomObject>