force-app/main/default/objects/Duplicate_Rules_Criteria__mdt/fields/Source_Field__c.field-meta.xml
<CustomField>
    <fullName>Source_Field__c</fullName>
    <description>The matching field in the source object used to compare with the target field.</description>
    <label>Source Field</label>
    <length>50</length>
    <type>Text</type>
</CustomField>