force-app/main/default/objects/Duplicate_Rules_Criteria__mdt/fields/Source_Object__c.field-meta.xml
<CustomField>
    <fullName>Source_Object__c</fullName>
    <description>The object whose records are compared against the target object to identify potential duplicates.</description>
    <label>Source Object</label>
    <length>50</length>
    <type>Text</type>
</CustomField>