force-app/main/default/objects/Duplicate_Rules_Criteria__mdt/fields/Target_Field__c.field-meta.xml
<CustomField>
    <fullName>Target_Field__c</fullName>
    <description>The specific field in the target object used for comparison</description>
    <label>Target Field</label>
    <length>50</length>
    <type>Text</type>
</CustomField>