force-app/main/default/objects/Duplicate_Rules_Criteria__mdt/fields/Target_Object__c.field-meta.xml
<CustomField>
    <fullName>Target_Object__c</fullName>
    <description>The object where duplicates need to be checked</description>
    <label>Target Object</label>
    <length>50</length>
    <type>Text</type>
</CustomField>