force-app/main/default/objects/Duplicate_Rules_Criteria__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Source_Field__c</columns>
    <columns>Source_Object__c</columns>
    <columns>Target_Field__c</columns>
    <columns>Target_Object__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>